--- a/exercicio/src/styles.css
+++ b/exercicio/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+}
+
+body{
+  background-color: #000;
+  color: aliceblue;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+
+}
+
+
+
