compartilhamento de dados entre pai e filho

--- a/exercicio/src/app/app.component.html
+++ b/exercicio/src/app/app.component.html
@@ -10,10 +10,6 @@
 
     <li>Crie um segundo componente chamado FilhoComponent que exibirá os dados recebidos do componente pai.</li>
 
-    <li>
-      Configure um serviço para gerenciar a comunicação entre os componentes. Este serviço será responsável por transmitir os dados do "<b>PaiComponent</b>" para o "<b>FilhoComponent</b>".
-    </li>
-
     <li>Ao pressionar o botão no PaiComponent, os dados inseridos no campo de entrada devem ser transmitidos ao "<b>FilhoComponent</b>"</li>
 
     <li>Exiba os dados recebidos no FilhoComponent em uma área específica da interface</li>
@@ -31,3 +27,7 @@
     </li>
   </ul>
 </div>
+
+<h3>Resolução:</h3>
+
+<app-pai-component></app-pai-component>
